# self_study

./: .gitignore  README.md  linalg_demo1_v2.html  linalg_demo1_v2.ipynb  linalg_demo1_v2.py
.ipynb_checkpoints/: Untitled-checkpoint.py  linalg_demo1-checkpoint.ipynb  linalg_demo1-checkpoint.py  linalg_demo1_v2-Copy1-checkpoint.py  linalg_demo1_v2-checkpoint.ipynb  linalg_demo1_v3-checkpoint.py
clang/: clang_test.ipynb  clang_test.py
computational_algebraic_statistics/: chapter1.ipynb  chapter1.tex  subsec11.tex  subsec12.tex  subsec13.tex
dl_study/: bert_study_bert_prod.py
journals/: SVI_test.py  laplace_prior_approx_vb_test.py
laplace_prior/: laplace_prior_by_analysis.py  laplace_prior_by_laplace_posterior.ipynb  laplace_prior_by_laplace_posterior.py  laplace_prior_by_laplace_posterior_qngd.ipynb  laplace_prior_by_laplace_posterior_qngd.py  laplace_prior_by_vb_eval.ipynb  laplace_prior_by_vb_eval.py  laplace_prior_by_vb_eval2.ipynb  laplace_prior_by_vb_eval2.py  laplace_prior_by_vb_eval3.ipynb  laplace_prior_by_vb_eval3.py  laplace_prior_by_vb_eval4.ipynb  laplace_prior_by_vb_eval4.py  laplace_prior_unique_solution.py
linear_algebra/: linalg_demo1.py  linalg_demo1_v3.ipynb  linalg_demo1_v3.py
prototypes/: est_rigid_trans.ipynb  est_rigid_trans_cov.ipynb  sg_mcmc_test.ipynb
reinforce_learning/rust/: Cargo.toml
reinforce_learning/rust/src/: lib.rs  main.rs  params.rs
rust/linfa_test/: Cargo.toml
rust/linfa_test/data/: bunny.pcd
rust/linfa_test/src/: main.rs
sparse_model_implementation/: admm_test.py  l0_greedy.ipynb  l0_greedy.py  (+4 more)
(+39 files in other folders)
